# apps/restify/cmd/docs/swagger.json
@@ -12,22 +12,6 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/api/v1/restaurants": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "restaurant"
-                ],
-                "summary": "Create a restaurant",
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
         "/api/v1/restaurants/": {
             "post": {
                 "description": "Allows to create a restaurant to the user",
